syntax = "proto3";

option csharp_namespace = "GrpcGraphQLWebSockets.Grpc.Proto";

import "google/api/annotations.proto";

package Grpc;
service GrpcMessagesService {
  rpc GetMessages (GrpcGetMessagesRequest) returns (GrpcGetMessagesResponse) {
    option (google.api.http) = {
      get: "/Grpc/messages"
    };
  }
  
  rpc CreateMessage (GrpcCreateMessageRequest) returns (GrpcCreateMessageResponse) {
    option (google.api.http) = {
      post: "/Grpc/messages"
      body: "messagePayload"
    };
  }
}

message GrpcGetMessagesRequest {
  
}

message GrpcGetMessagesResponse {
  repeated GrpcMessage messages = 1;
}

message GrpcMessage {
  int64 id = 1;
  string text = 2;
}

message GrpcCreateMessageRequest {
  GrpcMessagePayload messagePayload = 1;
}

message GrpcMessagePayload {
  string text = 1;
}

message GrpcCreateMessageResponse {
  int64 id = 1;
}